# Batch-67-Q1

./: readme.md  test.py
A1-101/: readme.md
A1-101/02-Feb/: Class_10.ipynb  Readme.md
A1-101/05-Jan/: class_6.ipynb
A1-101/15-Dec/: Class_3.ipynb  Variables.ipynb
A1-101/16-Feb/streamlit/: main00.py
A1-101/16-Feb/streamlit_ui/: pyproject.toml
A1-101/16-Feb/streamlit_ui/src/streamlit_ui/: __init__.py  main.py
A1-101/19-Jan/: 19_Jan_Function.ipynb
A1-101/2-March/stream_lit/: pyproject.toml
A1-101/2-March/stream_lit/src/stream_lit/: main.py  script.py
A1-101/22-Dec/: Class_4.ipynb  Class_4_a.ipynb
A1-101/23-Feb/agentic/: pyproject.toml
A1-101/23-Feb/agentic/src/agentic/: __init__.py  main.py  script.py
A1-101/8-Dec/: helloworld.ipynb  helloworld.py  work.ipynb
A1-101/9-Feb/: Class_11.ipynb
A1-101/assignments/: practice_question.md  python_practice.md
A1-101/assignments/assignment-02/: readme.md
A1-101/assignments/assignment-03/: Extra_practice.md  readme.md
A1-101/assignments/assignment-04/: readme.md
A1-101/assignments/assignment-05/: readme.md
A1-101/assignments/assignment-06/: 100+ Python challenging programming exercises for Python 3.md
