[project]
name = "streamlit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jahanzaib Tayyab", email = "jtayyab204@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.0",
]

[project.scripts]
streamlit-ui = "streamlit_ui:main"
main = "streamlit_ui streamlit run main.py"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
