[project]
name = "stream-lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jahanzaib Tayyab", email = "jtayyab204@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.2",
]

[project.scripts]
stream-lit = "stream_lit:main"
run_app = "stream_lit.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
